# Longevity

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  keybindings.json  pyproject.toml  settings.json
.github/workflows/: daily_mail.yml
src/calendar/: main.py  spec.py
src/longevity/: config.py  debug_env.py  engine.py  mailer.py  main.py  spec.py  test_debug.py
tests/: test_smoke.py
