[tool.poetry]
name = "longevity"
version = "0.1.0"
description = "Data Science project template"
authors = ["Arkadiusz Pajda <arkadiusz.pajda.97@onet.pl>"]
readme = "README.md"
packages = [{ include = "longevity", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyterlab = "^4.0.0"
notebook = "^6.5.4"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
mypy = "^1.11.0"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"

# Typy / stubs (DS-friendly)
pandas-stubs = "^2.3.3.251219"
types-python-dateutil = "^2.9.0.20251115"
ipykernel = "^7.1.0"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q --cov=longevity --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]

ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
pretty = true
show_error_codes = true

# pragmatyczny start
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
